syntax = "proto3";
package remote_test_messages;
option csharp_namespace = "Proto.Remote.Tests.Messages";
import "Proto.Actor/Protos.proto";

message Start {}
message StartRemote {
	actor.PID Sender = 1;
}
message Forward {
	actor.PID Target = 1;
	string message = 2;
}
message ForwardResponse {
	string message = 1;
	actor.PID sender = 2;
}
message Ping {
	string message=1;
}
message Pong {
	string message=1;
}
message Die {
}

message BinaryMessage {
	string id =1;
	bytes payload = 2;
}

message Ack {
}

message SpawnOnMeAndPing {
	string message=1;
}
message SpawnOnMeAndPingResponse {
	actor.PID pid=1;
	string message=2;
}